Fix Image Positionning and Figcaption Not showing in Clickable Images

--- a/css/lesson.css
+++ b/css/lesson.css
@@ -200,7 +200,7 @@
 	 border-radius: 4px;
 	 padding: 5px;
 	 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	 width:100%;  /* for image to resize correctly with custom with. DO NOT REMOVE
+	 width:100%;  /* for image to resize correctly with custom with. DO NOT REMOVE */
 	}
  
  .noimgbox {
@@ -222,6 +222,7 @@
 }
 
  figure {
+	 display:block;
 	 text-align: center;
 	 font-style: italic;
 	 font-size: smaller;
